[gd_scene load_steps=2 format=3 uid="uid://befohhsfsw4gw"]

[ext_resource type="Script" uid="uid://c7bng6jsxwdxq" path="res://UI/HUD/HUD.gd" id="1_abcde"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_abcde")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -10.0
grow_vertical = 0

[node name="HullBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HullLabel" type="Label" parent="VBoxContainer/HullBar"]
layout_mode = 0
text = "Hull: 100/100"

[node name="ShieldBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
max_value = 50.0
value = 50.0
show_percentage = false

[node name="ShieldLabel" type="Label" parent="VBoxContainer/ShieldBar"]
layout_mode = 0
text = "Shields: 50/50"

[node name="PowerBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="PowerLabel" type="Label" parent="VBoxContainer/PowerBar"]
layout_mode = 0
text = "Power: 100/100"
